[gd_scene load_steps=53 format=2]

[ext_resource path="res://Scripts/Nights/Camera/cam_updater.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Nights/chara_ai.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Nights/Office/off_manager.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Nights/Office/off_scrolling.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Nights/tablet_manager.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Nights/Camera/cam_manager.gd" type="Script" id=6]
[ext_resource path="res://Shaders/equirectangular_perspective.gdshader" type="Shader" id=7]
[ext_resource path="res://Shaders/crt_wave.gdshader" type="Shader" id=8]
[ext_resource path="res://AnimationTree/animtree_camera.tres" type="AnimationNodeBlendTree" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://Sprites/HUD/cam_barbutton.png" type="Texture" id=11]
[ext_resource path="res://Sprites/CamRooms/room3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Static/static_anim.png" type="Texture" id=13]
[ext_resource path="res://Sprites/CamRooms/room2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/CamRooms/room4.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Office/office.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Tablet/tablet_anim.png" type="Texture" id=17]
[ext_resource path="res://Sprites/HUD/cam_buttons.png" type="Texture" id=18]
[ext_resource path="res://Sprites/HUD/cam_bmap.png" type="Texture" id=19]
[ext_resource path="res://Sprites/CamRooms/room1.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 380, 380 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 17 )
region = Rect2( 3520, 653, 880, 653 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 17 )
region = Rect2( 2640, 653, 880, 653 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 17 )
region = Rect2( 1760, 653, 880, 653 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 17 )
region = Rect2( 880, 653, 880, 653 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 17 )
region = Rect2( 0, 653, 880, 653 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 17 )
region = Rect2( 3520, 0, 880, 653 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 17 )
region = Rect2( 2640, 0, 880, 653 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 17 )
region = Rect2( 1760, 0, 880, 653 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 17 )
region = Rect2( 880, 0, 880, 653 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 880, 653 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "lift",
"speed": 60.0
} ]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 18 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 18 )
region = Rect2( 0, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 18 )
region = Rect2( 48, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 18 )
region = Rect2( 0, 64, 48, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 18 )
region = Rect2( 48, 64, 48, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 18 )
region = Rect2( 0, 96, 48, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 18 )
region = Rect2( 48, 96, 48, 32 )

[sub_resource type="ShaderMaterial" id=45]
shader = ExtResource( 8 )
shader_param/roll_speed = -2.0
shader_param/roll_size = 25.0
shader_param/roll_variation = 0.62
shader_param/distort_intensity = 0.01
shader_param/noise_opacity = 0.1

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 1198, 890 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 13 )
region = Rect2( 1198, 0, 1198, 890 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 13 )
region = Rect2( 0, 890, 1198, 890 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 13 )
region = Rect2( 1198, 890, 1198, 890 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CameraElements/CamHUD/Static:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.235294 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CameraElements/CamRooms/room1:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1280, 2880 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "cam_scroll"
length = 16.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("CameraElements/CamRooms/room1:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 5, 11, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 798, 2372 ), Rect2( 0, 0, 798, 2372 ), Rect2( 268, 0, 798, 2372 ), Rect2( 268, 0, 798, 2372 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CameraElements/CamRooms/room2:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 268, 0, 798, 2372 ), Rect2( 268, 0, 798, 2372 ), Rect2( 0, 0, 798, 2372 ), Rect2( 0, 0, 798, 2372 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CameraElements/CamRooms/room3:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 4, 10, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 798, 1186 ), Rect2( 0, 0, 798, 1186 ), Rect2( 268, 0, 798, 1186 ), Rect2( 268, 0, 798, 1186 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CameraElements/CamRooms/room4:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6, 8, 14, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 268, 0, 798, 1186 ), Rect2( 268, 0, 798, 1186 ), Rect2( 0, 0, 798, 1186 ), Rect2( 0, 0, 798, 1186 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "static_boot"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CameraElements/CamHUD/Static:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.235294 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "static_idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CameraElements/CamHUD/Static:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.235294 ) ]
}

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/pitch = 0.0
shader_param/fov = 0.32
shader_param/stretch = Vector2( 54, 27 )

[node name="Nights" type="Node2D"]

[node name="OfficeElements" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Office" type="Sprite" parent="OfficeElements"]
position = Vector2( 0, -200 )
texture = ExtResource( 16 )
centered = false
offset = Vector2( -540, 0 )
script = ExtResource( 4 )
item_offsets = [ [ NodePath("ButtonExample/Area2D"), 100, -800, -50 ], [ NodePath("ButtonExample2/Area2D"), -60, 0, 800 ], [ NodePath("ButtonExample3/Area2D"), -450, -400, -40 ] ]

[node name="ButtonExample" type="Sprite" parent="OfficeElements/Office"]
position = Vector2( 250, 750 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="OfficeElements/Office/ButtonExample"]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OfficeElements/Office/ButtonExample/Area2D"]
position = Vector2( 60, 68 )
z_index = 50
shape = SubResource( 46 )

[node name="ButtonExample2" type="Sprite" parent="OfficeElements/Office"]
position = Vector2( 1675, 750 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="OfficeElements/Office/ButtonExample2"]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OfficeElements/Office/ButtonExample2/Area2D"]
position = Vector2( 60, 68 )
z_index = 50
shape = SubResource( 46 )

[node name="ButtonExample3" type="Sprite" parent="OfficeElements/Office"]
position = Vector2( 800, 750 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="OfficeElements/Office/ButtonExample3"]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OfficeElements/Office/ButtonExample3/Area2D"]
position = Vector2( 60, 68 )
z_index = 50
shape = SubResource( 46 )

[node name="TabletElements" type="Node2D" parent="."]
position = Vector2( 960, 1013 )
scale = Vector2( 1.5, 1.5 )
z_index = 15
script = ExtResource( 5 )
off_scroll_path = NodePath("../OfficeElements/Office")
camera_path = NodePath("../CameraElements")

[node name="TabletSprite" type="AnimatedSprite" parent="TabletElements"]
visible = false
position = Vector2( -440, -608 )
frames = SubResource( 5 )
animation = "lift"
centered = false

[node name="TabletButton" type="Node2D" parent="TabletElements"]
z_index = 5

[node name="Button" type="TextureButton" parent="TabletElements/TabletButton"]
modulate = Color( 1, 1, 1, 0.2 )
margin_left = -320.0
margin_top = -26.0
margin_right = 320.0
margin_bottom = 45.0
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 11 )

[node name="Tween" type="Tween" parent="TabletElements"]

[node name="CameraElements" type="Node2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="CamRooms" type="Node2D" parent="CameraElements"]
position = Vector2( -320, 0 )
scale = Vector2( 1.5, 1.5 )
z_index = 15
script = ExtResource( 1 )

[node name="room1" type="Sprite" parent="CameraElements/CamRooms"]
position = Vector2( 454.333, 98.333 )
texture = ExtResource( 20 )
centered = false
vframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 2880 )

[node name="room2" type="Sprite" parent="CameraElements/CamRooms"]
visible = false
position = Vector2( 454.333, 98.333 )
texture = ExtResource( 14 )
centered = false
vframes = 4
region_enabled = true
region_rect = Rect2( 93.905, 0, 798, 2372 )

[node name="room3" type="Sprite" parent="CameraElements/CamRooms"]
visible = false
position = Vector2( 454.333, 98.333 )
texture = ExtResource( 12 )
centered = false
vframes = 2
region_enabled = true
region_rect = Rect2( 263.428, 0, 798, 1186 )

[node name="room4" type="Sprite" parent="CameraElements/CamRooms"]
visible = false
position = Vector2( 454.333, 98.333 )
texture = ExtResource( 15 )
centered = false
vframes = 2
region_enabled = true
region_rect = Rect2( 84.7617, 0, 798, 1186 )

[node name="CamButtons" type="Node2D" parent="CameraElements"]
z_index = 19

[node name="room1" type="TextureButton" parent="CameraElements/CamButtons"]
margin_left = 1298.0
margin_top = 635.0
margin_right = 1346.0
margin_bottom = 667.0
rect_scale = Vector2( 1.5, 1.5 )
disabled = true
shortcut_in_tooltip = false
texture_normal = SubResource( 23 )
texture_disabled = SubResource( 24 )

[node name="room2" type="TextureButton" parent="CameraElements/CamButtons"]
margin_left = 1298.0
margin_top = 757.0
margin_right = 1346.0
margin_bottom = 789.0
rect_scale = Vector2( 1.5, 1.5 )
shortcut_in_tooltip = false
texture_normal = SubResource( 25 )
texture_disabled = SubResource( 26 )

[node name="room3" type="TextureButton" parent="CameraElements/CamButtons"]
margin_left = 1169.0
margin_top = 778.0
margin_right = 1217.0
margin_bottom = 810.0
rect_scale = Vector2( 1.5, 1.5 )
shortcut_in_tooltip = false
texture_normal = SubResource( 27 )
texture_disabled = SubResource( 28 )

[node name="room4" type="TextureButton" parent="CameraElements/CamButtons"]
margin_left = 1453.0
margin_top = 819.0
margin_right = 1501.0
margin_bottom = 851.0
rect_scale = Vector2( 1.5, 1.5 )
shortcut_in_tooltip = false
texture_normal = SubResource( 29 )
texture_disabled = SubResource( 30 )

[node name="CamHUD" type="Node2D" parent="CameraElements"]
z_index = 18

[node name="CRTWave_Shader" type="ColorRect" parent="CameraElements/CamHUD"]
material = SubResource( 45 )
margin_left = 361.0
margin_top = 148.0
margin_right = 1559.0
margin_bottom = 1037.0
mouse_filter = 2

[node name="Static" type="AnimatedSprite" parent="CameraElements/CamHUD"]
modulate = Color( 1, 1, 1, 0.235294 )
position = Vector2( 361, 147.1 )
frames = SubResource( 3 )
speed_scale = 5.0
playing = true
centered = false

[node name="Border&Map" type="Sprite" parent="CameraElements/CamHUD"]
position = Vector2( 374, 160 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )
centered = false

[node name="BackBufferCopy" type="BackBufferCopy" parent="CameraElements"]
z_index = 15
copy_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CameraElements"]
root_node = NodePath("../..")
anims/RESET = SubResource( 6 )
anims/cam_scroll = SubResource( 9 )
anims/static_boot = SubResource( 8 )
anims/static_idle = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="CameraElements"]
tree_root = ExtResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Add2/add_amount = 1.0
parameters/StaticState/playback = SubResource( 18 )

[node name="CharacterAI" type="Node2D" parent="."]
visible = false
script = ExtResource( 2 )
cam_feed_path = NodePath("../CameraElements/CamRooms")

[node name="RedTimer" type="Timer" parent="CharacterAI"]
wait_time = 4.97
autostart = true

[node name="GreenTimer" type="Timer" parent="CharacterAI"]
wait_time = 3.02
autostart = true

[node name="PerspectiveShader" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[connection signal="input_event" from="OfficeElements/Office/ButtonExample/Area2D" to="OfficeElements" method="_on_Area2D_input_event"]
[connection signal="input_event" from="OfficeElements/Office/ButtonExample2/Area2D" to="OfficeElements" method="_on_Area2D_input_event"]
[connection signal="input_event" from="OfficeElements/Office/ButtonExample3/Area2D" to="OfficeElements" method="_on_Area2D_input_event"]
[connection signal="animation_finished" from="TabletElements/TabletSprite" to="TabletElements" method="_tablet_animation_finished"]
[connection signal="mouse_entered" from="TabletElements/TabletButton/Button" to="TabletElements" method="on_mouse_enter"]
[connection signal="mouse_exited" from="TabletElements/TabletButton/Button" to="TabletElements" method="on_mouse_exit"]
[connection signal="pressed" from="TabletElements/TabletButton/Button" to="TabletElements" method="_on_click"]
[connection signal="pressed" from="CameraElements/CamButtons/room1" to="CameraElements" method="_on_click_cam" binds= [ 0 ]]
[connection signal="pressed" from="CameraElements/CamButtons/room2" to="CameraElements" method="_on_click_cam" binds= [ 1 ]]
[connection signal="pressed" from="CameraElements/CamButtons/room3" to="CameraElements" method="_on_click_cam" binds= [ 2 ]]
[connection signal="pressed" from="CameraElements/CamButtons/room4" to="CameraElements" method="_on_click_cam" binds= [ 3 ]]
[connection signal="timeout" from="CharacterAI/RedTimer" to="CharacterAI" method="_char_timer_timeout" binds= [ 0 ]]
[connection signal="timeout" from="CharacterAI/GreenTimer" to="CharacterAI" method="_char_timer_timeout" binds= [ 1 ]]
